2010-06-30  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (Ffont_get_system_normal_font, Ffont_get_system_font):
	Improve documentation.  Return font regardless of use_system_font.
	(syms_of_xsettings): Improve documentation for font-use-system-font.

2009-06-17  Naohiro Aota  <naota@elisp.net>  (tiny change)

	* xftfont.c (xftfont_open): Check font width one by one also when
	spacing is dual.

	* ftfont.c (ftfont_open): Ditto.

2010-06-30  Glenn Morris  <rgm@gnu.org>

	* s/sol2-6.h (INHIBIT_X11R6_XIM): Remove, handled by configure now.

	* Makefile.in (CANNOT_DUMP): Update for configure name change.

	* s/freebsd.h (USE_MMAP_FOR_BUFFERS):
	* s/irix6-5.h (USE_MMAP_FOR_BUFFERS):
	* s/darwin.h (SYSTEM_MALLOC):
	* s/sol2-10.h (SYSTEM_MALLOC): Move to configure.

2010-06-29  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m: extern declare Vmenu_bar_mode, Vtool_bar_mode.
	(ns_get_screen): Don't assign integer to f.
	(Fx_display_color_cells): Declarations before statements.

2010-06-28  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (x_default_font_parameter): Remove got_from_system
	(Bug#6526).

	* xterm.h (gtk_widget_get_window, gtk_widget_get_mapped)
	(gtk_adjustment_get_page_size, gtk_adjustment_get_upper): New
	defines based on what configure finds.

	* xterm.c (XTflash): Use gtk_widget_get_window.
	(xg_scroll_callback): Use gtk_adjustment_get_upper and
	gtk_adjustment_get_page_size.
	(handle_one_xevent): Use gtk_widget_get_mapped.
	(x_term_init): Remove HAVE_GTK_MULTIDISPLAY and associated error
	messages.

	* xmenu.c (create_and_show_popup_menu): Call gtk_widget_get_mapped.

	* gtkutil.h: Replace HAVE_GTK_FILE_BOTH with
	HAVE_GTK_FILE_SELECTION_NEW.

	* gtkutil.c (xg_display_open, xg_display_close): Remove
	HAVE_GTK_MULTIDISPLAY, it is always defined.
	(xg_display_open): Return type is void.
	(gtk_widget_set_has_window)
	(gtk_dialog_get_action_area, gtk_dialog_get_content_area)
	(gtk_widget_get_sensitive, gtk_adjustment_set_page_size)
	(gtk_adjustment_set_page_increment)